--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   },
   "dependencies": {
     "aos": "^2.3.4",
-    "framer-motion": "^12.9.2",
+    "framer-motion": "^12.23.22",
     "lucide-react": "^0.545.0",
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-tsparticles": "^2.12.2",
+    "tsparticles": "^2.11.1",
+    "tsparticles-engine": "^2.12.0",
     "yet-another-react-lightbox": "^3.25.0"
   },
   "devDependencies": {
